Created buttons added simple js to get the value of the buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Priedra, papel, tijeras</h1>
+        <div>
+            <button id="piedra" value="0">Piedra</button>
+            <button id="papel" value="1">Papel</button>
+            <button id="tijeras" value="2">Tijeras</button>
+        </div>
         <script src="javascript.js"></script>
     </body>
 </html>
